--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "cloudinary": "^1.37.1",
+    "cloudinary": "^1.37.3",
+    "encoding": "^0.1.13",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.0",
     "next": "13.4.6",
